syntax = "proto3";

package book;


message Book {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetBookRequest {
  string book_id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message SearchBooksRequest {
  string query = 1;
}

message SearchBooksResponse {
  repeated Book books = 1;
}

message CreateBookRequest {
  string book_id = 1;
  string title = 2;
  string description = 3;
}

message CreateBookResponse {
  Book book = 1;
}

service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
}
